tests/baselines/reference/classExpression3.errors.txt
tests/cases/conformance/classes/classExpressions/classExpression3.ts(1,23): error TS2690: A class must be declared after its base class.
tests/cases/conformance/classes/classExpressions/classExpression3.ts(1,37): error TS2690: A class must be declared after its base class.


==== tests/cases/conformance/classes/classExpressions/classExpression3.ts (2 errors) ====
    let C = class extends class extends class { a = 1 } { b = 2 } { c = 3 };
                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2690: A class must be declared after its base class.
                                        ~~~~~~~~~~~~~~~
!!! error TS2690: A class must be declared after its base class.
    let c = new C();
    c.a;
    c.b;
    c.c;
    